--- a/instant-message/src/app/app.component.html
+++ b/instant-message/src/app/app.component.html
@@ -5,6 +5,23 @@
         </div>
     </div>
     <div class="row message-container">
-        <router-outlet></router-outlet>
+        <div *ngFor="let message of (messages$ | async); let index = index trackBy: trackByIndex" class="row message">
+            <div class="col-3"></div>
+            <div class="col text">
+                message
+            </div>
+        </div>
     </div>
+    <form [formGroup]="messageForm" (ngSubmit)="onSubmit(messageForm)">
+        <input
+            formControlName='msg'
+            type="text"
+        />
+        <button
+            type='submit'
+            class="btn btn-group btn-primary"
+        >
+            send
+        </button>
+    </form>
 </div>
