--- a/instant-message/src/app/app.component.html
+++ b/instant-message/src/app/app.component.html
@@ -21,6 +21,8 @@
                     class="message-input"
                     resize="none"
                     appAutoGrow
+                    [minHeight]="29"
+                    [maxHeight]="100"
                 >
                 </textarea>
                 <button
