UPDATE: name of directive (more descriptive)

--- a/instant-message/src/app/app.component.html
+++ b/instant-message/src/app/app.component.html
@@ -20,7 +20,7 @@
                     formControlName="msg"
                     class="message-input"
                     resize="none"
-                    appAutoGrow
+                    appDynamicTextarea
                     [minHeight]="29"
                     [maxHeight]="100"
                 >
