FEATURE: User only sees new user not. from others
- No notification when user logs in
- Message displayed based on type
- New user displayed based on type

--- a/instant-message/src/app/app.component.html
+++ b/instant-message/src/app/app.component.html
@@ -5,12 +5,21 @@
         </div>
     </div>
     <div class="container message-container">
+        <div *ngFor="let event of allEvents; let index = index trackBy: trackByIndex">
+
             <app-in-message
-                *ngFor="let message of allEvents; let index = index trackBy: trackByIndex"
-                [message]='message'
-                class='msg'
+                *ngIf="event.eventType === 'MSG'"
+                [message]='event.message'
             >
             </app-in-message>
+
+            <app-new-user
+                *ngIf="event.eventType === 'NEW_USER'"
+                [username]='event.username'
+            >
+            </app-new-user>
+
+        </div>
     </div>
     <div class="row fixed-text-box">
         <div class="col">
