--- a/instant-message/src/app/app.component.html
+++ b/instant-message/src/app/app.component.html
@@ -10,6 +10,7 @@
             <app-in-message
                 *ngIf="event.eventType === 'MSG'"
                 [message]='event.message'
+                [username]='event.user.username'
             >
             </app-in-message>
 
