STYLE+FEATURE: user on separate side
- User's texts on right, incoming on left
- Profile circles by text

--- a/instant-message/src/app/app.component.html
+++ b/instant-message/src/app/app.component.html
@@ -8,11 +8,18 @@
         <div *ngFor="let event of allEvents; let index = index trackBy: trackByIndex">
 
             <app-in-message
-                *ngIf="event.eventType === 'MSG'"
+                *ngIf="event.eventType === 'MSG' && event.user.id !== user.id"
                 [message]='event.message'
                 [username]='event.user.username'
             >
             </app-in-message>
+
+            <app-out-message
+                *ngIf="event.eventType === 'MSG' && event.user.id === user.id"
+                 [message]='event.message'
+                 [username]='event.user.username'
+            >
+            </app-out-message>
 
             <app-new-user
                 *ngIf="event.eventType === 'NEW_USER'"
