--- a/instant-message/src/app/sign-in/sign-in.component.html
+++ b/instant-message/src/app/sign-in/sign-in.component.html
@@ -11,7 +11,7 @@
                             type="text"
                             placeholder="user name"
                             name="username"
-                            autocomplete="false"
+                            autocomplete="off"
                         />
                     </div>
                 </div>
