UPDATE: small updates for Angular 7
- RxJs 6
- Readme

--- a/instant-message/src/app/events/in-message/in-message.component.html
+++ b/instant-message/src/app/events/in-message/in-message.component.html
@@ -4,7 +4,7 @@
             {{ username.split('')[0] }}
         </div>
     </div>
-    <div class="col">
+    <div class="col-9">
         <div class="in-message">
             {{ message }}
             <i class="fa fa-caret-left"></i>
