--- a/instant-message/src/app/events/out-message/out-message.component.html
+++ b/instant-message/src/app/events/out-message/out-message.component.html
@@ -1,6 +1,6 @@
 <div class="row message">
     <div class="col-1"></div>
-    <div class="col msg-col">
+    <div class="col-9 msg-col">
         <div class="in-message">
             {{ message }}
             <i class="fa fa-caret-left"></i>
